Bug 1082425 - Commit composition string before changing focus by long tap. r=masayuki

This also prevents that long tapping to select word while composing
corrupts the editable data on B2G.