layout/base/AccessibleCaretManager.cpp
@@ -13,6 +13,7 @@
 #include "mozilla/dom/Element.h"
 #include "mozilla/dom/Selection.h"
 #include "mozilla/dom/TreeWalker.h"
+#include "mozilla/IMEStateManager.h"
 #include "nsCaret.h"
 #include "nsContentUtils.h"
 #include "nsFocusManager.h"
@@ -431,6 +432,11 @@ AccessibleCaretManager::SelectWordOrShortcut(const nsPoint& aPoint)
   if (!selectable) {
     return NS_ERROR_FAILURE;
   }
+
+  // Commit the composition string of the old editable focus element (if there
+  // is any) before changing the focus.
+  IMEStateManager::NotifyIME(widget::REQUEST_TO_COMMIT_COMPOSITION,
+                             mPresShell->GetPresContext());
 
   // ptFrame is selectable. Now change the focus.
   ChangeFocusToOrClearOldFocus(focusableFrame);
